--- a/_posts/2020-04-02-思考4.1.md
+++ b/_posts/2020-04-02-思考4.1.md
@@ -1,4 +1,6 @@
-## 记录大于口头
+## 理清自己每天的生活思路
+
+### 记录大于口头的诉说
 
 还是意识到自己必须把自己的所思所考记录下来，沉淀下来，不然的话，每次的思考反思总是在一定的时间被忘却，对自己的成长进步一点效果没有，白白的浪费很多的时间。每次在口头上反思，自己的行为依然是走在错误的轨道上，导致这样的一种场景，当自己因为懒惰而错过某些机会，抑或是自己觉得不应该浪费某些时间的时候，自己特别的懊恼，然后便是痛苦过每一天，每天的心情很差，也没有激情精力干事情。
 
