add some contents

--- a/_posts/2020-04-02-思考4.1.md
+++ b/_posts/2020-04-02-思考4.1.md
@@ -9,3 +9,13 @@
 目前的境地就是我舍不得给自己定下期限，总是随性的做事情，事情的完成度不高，质量也不高，当前最好的解决办法就是给予自己期限，更好更快的完成。
 
 还有一个意识也要深埋在自己的心底，想到了就要去做，想到了就要去执行，不能因为自己的懒惰，自己的不作为，而错失很多的机会，生活就是不要抱有遗憾。
+
+### 资本是逐利的
+
+不是自己开办的公司，你永远都是在“老鼠赛跑”，每天都是为了钱在这奔波，最好的办法就只能是自己找到合理的资产去配置。资本家都是逐利的，他们关注的都是利润，也是理所应当的，没有利润的话，该怎么维系一个公司呢？所以，当你的领导在咨询你工作的进度的时候，这是合情合理的，不应该有抵触或者不爽的心态。上班不是可以由着自己的性子来的，毕竟自己不是老板，学会更好的摆正自己的心态和位置。时刻注意自己的行为，你要知道的是，你在为谁工作，你要为自己工作。
+
+你给自己创造了利益吗？你今天进步了吗？这些应该是自己每天思考的事情，不要那么玻璃心，又是领导对自己有偏见，或者别人跟自己的意见相左，只要管好自己，只要自己进步就行，我们更多的是需要聚焦于自己的事业，而不是管别人在做什么职业。
+
+积蓄自己的力量，慢慢的进化，最终成长为一个巨头。
+
+重要的是，每天自己都要有进步。
